--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ant-design-vue": "^3.2.12",
     "bootstrap": "^5.2.3",
     "sass-loader": "^13.0.2",
+    "scrollreveal": "^4.0.9",
     "swiper": "6.0.0-alpha.18",
     "wow.js": "^1.2.2"
   }
