--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass-loader": "^13.0.2",
     "scrollreveal": "^4.0.9",
     "swiper": "6.0.0-alpha.18",
+    "vue-scroll-reveal": "^1.0.11",
     "wow.js": "^1.2.2"
   }
 }
